[package]
# https://doc.rust-lang.org/cargo/reference/manifest.html
authors = ["Hiroshi Tsuyuki <kagemeka1@gmail.com>"]
categories = [
  "algorithms",
  "api-bindings",
  "asynchronous",
  "command-line-utilities",
] # https://crates.io/category_slugs
description = "A template for Rust project"
documentation = "https://docs.rs/atcoder"
edition = "2021"
homepage = "https://github.com/kagemeka/atcoder_rust#readme"
keywords = ["rust", "template"]
# license = "MIT"
license-file = "LICENSE"
name = "atcoder"
readme = "README.md"
repository = "https://github.com/kagemeka/atcoder_rust"
rust-version = "1.58.1"
version = "0.1.0"
# workspace = "."
build = false # "scripts/build.rs"
# links = "foo"
default-run = "main"
exclude = [
  "/docker/",
  "/scripts/",
]
include = [
  #   "/src",
]
# publish = ["<registry>"]

[dependencies]
anyhow = "1.0"
chrono = "0.4"
regex = "1.5.6"
reqwest = {version = "^0.11.11", features = ["json", "blocking"]}
scraper = {version = "0.13.0"}
tokio = {version = "1", features = ["full"]}
